# last-mile-delivery-optimizer

./: .gitignore  CLAUDE.md  README.md  SETUP.md  docker-compose.yml  pyproject.toml
api/: main.py
api/routers/: health.py  optimization.py  prediction.py
api/schemas/: optimization.py  prediction.py
configs/: model_config.yaml  solver_config.yaml
doc/: thesis_implementation_plan.md
docker/: Dockerfile.api  Dockerfile.frontend
frontend/: app.py
frontend/components/: map_display.py
frontend/pages/: compare.py  dashboard.py  optimize.py
models/: eta_lightgbm_v1_metadata.json  eta_rf_baseline_v1_metadata.json  evaluation_results.json
scripts/: download_data.sh  process_data.py  run_evaluation.py  run_solver_comparison.py  setup_osrm.sh  test_solver.py  train_model.py
src/data/: loader.py  preprocessor.py
src/features/: engineering.py
src/models/: evaluate.py  predict.py  train.py
src/optimization/: __init__.py  cost_matrix.py  osrm_client.py  vrp_solver.py
src/utils/: config.py  geo.py
tests/: conftest.py
tests/integration/: test_api.py  test_osrm.py
tests/unit/: test_features.py  test_geo.py  test_schemas.py  test_vrp_solver.py
