[project]
name = "last-mile-optimizer"
version = "0.1.0"
description = "ML-driven dynamic routing for last-mile delivery optimization"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "lightgbm>=4.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0,<2.1",
    "joblib>=1.4.0",
    "osmnx>=2.0.0",
    "networkx>=3.3",
    "geopandas>=1.0.0",
    "folium>=0.17.0",
    "pyvrp>=0.10.0",
    "ortools>=9.10",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "pyarrow>=17.0.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "streamlit>=1.39.0",
    "streamlit-folium>=0.22.0",
    "shap>=0.46.0",
    "vrplib>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "api", "frontend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests requiring external services (OSRM, etc.)",
]
